--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "box-breathing",
+  "name": "breathe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -21,6 +21,6 @@
     "sharp-ico": "0.1.5"
   },
   "dependencies": {
-    "@fontsource-variable/inter": "^5.1.1"
+    "@fontsource-variable/onest": "^5.1.1"
   }
 }
